Allow to enable/disable the audit feature from application secrets

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -12,6 +12,9 @@ apis: &apis
   sms_username: ""
   sms_password: ""
 
+audited: &audited
+  auditing_enabled: true
+
 http_basic_auth: &http_basic_auth
   http_basic_auth: true
 
