Log successful and failed login attempts in a separate log file
We log the login parameter and the request IP address.

Quoting the ENS:

> [op.acc.5.r5.1] Se registrarán los accesos con éxito y los fallidos.

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -22,6 +22,7 @@ development:
   multitenancy: false
   multitenancy_management_mode: false
   security:
+    authentication_logs: false
     last_sign_in: false
     # lockable:
       # maximum_attempts: 20
@@ -60,6 +61,7 @@ staging:
   multitenancy: false
   multitenancy_management_mode: false
   security:
+    authentication_logs: false
     last_sign_in: false
     # lockable:
       # maximum_attempts: 20
@@ -103,6 +105,7 @@ preproduction:
   multitenancy: false
   multitenancy_management_mode: false
   security:
+    authentication_logs: false
     last_sign_in: false
     # lockable:
       # maximum_attempts: 20
@@ -151,6 +154,7 @@ production:
   multitenancy: false
   multitenancy_management_mode: false
   security:
+    authentication_logs: false
     last_sign_in: false
     # lockable:
       # maximum_attempts: 20
