Add password complexity

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -27,6 +27,7 @@ development:
   security:
     authentication_logs: false
     last_sign_in: false
+    password_complexity: false
     # lockable:
       # maximum_attempts: 20
       # unlock_in: 1 # In hours
@@ -66,6 +67,7 @@ staging:
   security:
     authentication_logs: false
     last_sign_in: false
+    password_complexity: false
     # lockable:
       # maximum_attempts: 20
       # unlock_in: 1 # In hours
@@ -110,6 +112,7 @@ preproduction:
   security:
     authentication_logs: false
     last_sign_in: false
+    password_complexity: false
     # lockable:
       # maximum_attempts: 20
       # unlock_in: 1 # In hours
@@ -159,6 +162,7 @@ production:
   security:
     authentication_logs: false
     last_sign_in: false
+    password_complexity: false
     # lockable:
       # maximum_attempts: 20
       # unlock_in: 1 # In hours
