--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -110,8 +110,8 @@ preproduction:
   multitenancy: false
   multitenancy_management_mode: false
   security:
-    authentication_logs: false
     last_sign_in: false
+    authentication_logs: true
     password_complexity: false
     # lockable:
       # maximum_attempts: 20
@@ -160,8 +160,8 @@ production:
   multitenancy: false
   multitenancy_management_mode: false
   security:
-    authentication_logs: false
     last_sign_in: false
+    authentication_logs: true
     password_complexity: false
     # lockable:
       # maximum_attempts: 20
