Enable lockable devise module
Related MR !7

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -104,7 +104,7 @@ preproduction:
   errbit_self_hosted_ssl: false
   http_basic_username: ""
   http_basic_password: ""
-  devise_lockable: false
+  devise_lockable: true
   managers_url: ""
   managers_application_key: ""
   multitenancy: false
@@ -113,9 +113,9 @@ preproduction:
     authentication_logs: true
     last_sign_in: true
     password_complexity: false
-    # lockable:
-      # maximum_attempts: 20
-      # unlock_in: 1 # In hours
+    lockable:
+      maximum_attempts: 20
+      unlock_in: 1 # In hours
   tenants:
     # If you've enabled multitenancy, you can overwrite secrets for a
     # specific tenant with:
@@ -154,7 +154,7 @@ production:
   errbit_self_hosted_ssl: false
   http_basic_username: ""
   http_basic_password: ""
-  devise_lockable: false
+  devise_lockable: true
   managers_url: ""
   managers_application_key: ""
   multitenancy: false
@@ -163,9 +163,9 @@ production:
     authentication_logs: true
     last_sign_in: true
     password_complexity: false
-    # lockable:
-      # maximum_attempts: 20
-      # unlock_in: 1 # In hours
+    lockable:
+      maximum_attempts: 20
+      unlock_in: 1 # In hours
   tenants:
     # If you've enabled multitenancy, you can overwrite secrets for a
     # specific tenant with:
