Enable audited globally
Related MR !10

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -133,6 +133,7 @@ preproduction:
   google_oauth2_secret: ""
   <<: *maps
   <<: *apis
+  <<: *audited
 
 production:
   # secret_key_base: ""
@@ -186,3 +187,4 @@ production:
   wordpress_oauth2_site: ""
   <<: *maps
   <<: *apis
+  <<: *audited
