Enable password complexity
Related MR !17

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -112,7 +112,7 @@ preproduction:
   security:
     authentication_logs: true
     last_sign_in: true
-    password_complexity: false
+    password_complexity: true
     lockable:
       maximum_attempts: 20
       unlock_in: 1 # In hours
@@ -163,7 +163,7 @@ production:
   security:
     authentication_logs: true
     last_sign_in: true
-    password_complexity: false
+    password_complexity: true
     lockable:
       maximum_attempts: 20
       unlock_in: 1 # In hours
