Allow setting git_http_username and git_http_password
In order to allow deploying in Isla Abierta servers, we need allow setting
these configuration parameters.

--- a/config/deploy-secrets.yml.example
+++ b/config/deploy-secrets.yml.example
@@ -3,6 +3,8 @@ staging:
   ssh_port: "21"
   server: "staging.consul.es"
   user: "deploy"
+  git_http_username: ""
+  git_http_password: ""
 
 preproduction:
   deploy_to: "/home/deploy/consul"
@@ -10,6 +12,8 @@ preproduction:
   server1: xxx.xxx.xxx.xxx
   server2: xxx.xxx.xxx.xxx
   user: "deploy"
+  git_http_username: ""
+  git_http_password: ""
 
 production:
   deploy_to: "/home/deploy/consul"
@@ -17,3 +21,5 @@ production:
   server1: xxx.xxx.xxx.xxx
   server2: xxx.xxx.xxx.xxx
   user: "deploy"
+  git_http_username: ""
+  git_http_password: ""
